# DotVis

./: .gitignore  .gitmodules  CMakeLists.txt  project.gitignore
DotVis/: CMakeLists.txt  DotVis.sln  DotVis.vcxproj  DotVis.vcxproj.filters
DotVis/DotVis/: DotVis.vcxproj  DotVis.vcxproj.filters
DotVis/include/: Canvas.h  ComputeSh.h  DVF.h  Files.h  RDevice.h  Raytracer.h  ShaderBuilder.h  ShaderComponents.h  ShaderPart.h  Texture2DResource.h  TextureCommon.h
DotVis/include/Builders/: ShaderBuilder.h  TextureCommon.h
DotVis/include/Core/: DVF.h
DotVis/include/Data/: Files.h
DotVis/include/Rendering/: Canvas.h  RDevice.h
DotVis/include/Rendering/Tracing/: Raytracer.h
DotVis/include/Resources/: Texture2DResource.h
DotVis/include/Shaders/: ComputeSh.h  ShaderComponents.h  ShaderPart.h
DotVis/shaders/: Common.hlsli  RayCommon.hlsli  Scene.hlsli  SphereObject.hlsli  TraceScene.hlsl
DotVis/shaders/Raytracing/: RayCommon.hlsli  TraceScene.hlsl
DotVis/source/: Canvas.cpp  ComputeSh.cpp  Files.cpp  RDevice.cpp  Raytracer.cpp  ShaderBuilder.cpp  ShaderComponents.cpp  ShaderPart.cpp  Texture2DResource.cpp  TextureCommon.cpp
DotVis/src/Builders/: ShaderBuilder.cpp  TextureCommon.cpp
DotVis/src/Data/: Files.cpp
DotVis/src/Rendering/: Canvas.cpp  RDevice.cpp
DotVis/src/Rendering/Tracing/: Raytracer.cpp
DotVis/src/Resources/: Texture2DResource.cpp
DotVis/src/Shaders/: ComputeSh.cpp  ShaderComponents.cpp  ShaderPart.cpp
Visionary/: .gitignore  CMakeLists.txt  Visionary.sln  visproj.gitignore
Visionary/Visionary/: Program.cpp  VisionApp.cpp  (+4 more)
(+3 files in other folders)
